# QuantifyingAttitude

./: CMakeLists.txt  README.md  attitude_main.cpp  main_utils.h
InfluenceMaximization/: TIMInfluenceCalculator.cpp
InfluenceMaximization/Attitude/: AttitudeCalcSpaceEfficient.cpp  AttitudeCalcSpaceEfficient.hpp  AttitudeCalculator.cpp  AttitudeMaximizer.cpp  AttitudeMaximizer.hpp  AttitudeMinusInfMaximizer.cpp  AttitudeMinusInfMaximizer.hpp
InfluenceMaximization/DiffusionAlgorithms/: AttitudeMinusInfDiffusion.cpp  AttitudeMinusInfDiffusion.hpp  Diffusion.cpp  Diffusion.h  DiffusionBase.cpp  DiffusionBase.hpp
InfluenceMaximization/Graph/: GenerateGraphLabels.cpp  GenerateGraphLabels.hpp  Graph.cpp  Graph.hpp
InfluenceMaximization/IMResults/: IMResults.h
InfluenceMaximization/RISCalculation/: InfluenceCalcSpaceEfficient.cpp  InfluenceCalcSpaceEfficient.hpp  RISCalcSpaceEfficient.cpp  RISCalcSpaceEfficient.hpp
InfluenceMaximization/TIM-Models/: RISRRGraph.cpp  RISRRGraph.hpp  TIMCoverage.cpp  TIMCoverage.hpp
graphs/: dblp_AAAI_graph_with_edge_probability_denominator_as__max_num_cooperations_between_some_pair_without_single_author.txt  dblp_FOCS_STOC_graph_with_edge_probability_denominator_as__max_num_cooperations_between_some_pair_without_single_author.txt  dblp_KDD_graph_with_edge_probability_denominator_as__max_num_cooperations_between_some_pair_without_single_author.txt  facebook_combined.txt
